<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99CCFF"
    android:orientation="vertical"
    tools:context="au.edu.jcu.it.guessinggame.MainActivity" xmlns:android1="http://schemas.android.com/apk/res/android">

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="buttonHandler"
        android:text="@string/play_game_"
        android:textColor="#FFFF66"
        android:textSize="48sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="buttonHandler"
        android:text="@string/instructions_"
        android:textColor="@color/textYellow"
        android:textSize="44sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="buttonHandler"
        android:text="@string/highscores_"
        android:textColor="#FFFF66"
        android:textSize="48sp"
        android:textStyle="bold" />

</LinearLayout>